# Zotero2Readwise

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPENDABOT.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: automation.yml  linter.yml
zotero2readwise/: __init__.py  exception.py  helper.py  readwise.py  run.py  zotero.py  zt2rw.py
