[tool.poetry]
name = "zotero2readwise"
version = "0.4.5"
description = "Export your Zotero annotations and notes to Readwise"
readme = "README.md"
authors = ["ealizadeh <hello@ealizadeh.com>"]
license = "MIT"
homepage = "https://github.com/e-alizadeh/Zotero2Readwise"
repository = "https://github.com/e-alizadeh/Zotero2Readwise"
documentation = "https://github.com/e-alizadeh/Zotero2Readwise"
keywords = [
    "Zotero",
    "Readwise",
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
    "Development Status :: 3 - Alpha"
]

packages = [
    { include = "zotero2readwise"}
]

[tool.semantic_release]
version_variables = [
    "zotero2readwise/__init__.py:__version__",
    "pyproject.toml:version"
]

[tool.semantic_release.remote.token]
env = "GH_TOKEN" # default env name containing the GitHub Token 

[tool.pdm.build]
includes = ["zotero2readwise"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"

[tool.ruff]
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
fix = true

[tool.ruff.isort]
known-first-party = ["zotero2readwise"]

[tool.ruff.pydocstyle]
convention="google"

[project]
authors = [
    {name = "ealizadeh", email = "hello@ealizadeh.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.8"
dependencies = [
    "Pyzotero<1.6.2,>=1.6.1",
    "requests<3.0.0,>=2.26.0",
]
name = "zotero2readwise"
version = "0.4.5"
description = "Export your Zotero annotations and notes to Readwise"
readme = "README.md"
keywords = [
    "Zotero",
    "Readwise",
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
    "Development Status :: 3 - Alpha",
]

[project.urls]
homepage = "https://github.com/e-alizadeh/Zotero2Readwise"
repository = "https://github.com/e-alizadeh/Zotero2Readwise"
documentation = "https://github.com/e-alizadeh/Zotero2Readwise"

[dependency-groups]
dev = [
    "ipython<8.0.0,>=7.32.0",
    "pre-commit<3.0.0,>=2.16.0",
    "ipdb<1.0.0,>=0.13.9",
]
