[tool.semantic_release]
version_variables = [
    "zotero2readwise/__init__.py:__version__",
    "pyproject.toml:version"
]

[tool.semantic_release.remote.token]
env = "GH_TOKEN" # default env name containing the GitHub Token

[tool.pdm.build]
includes = ["zotero2readwise"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
target-version = "py311"
lint.select = [
    "PL", # Pylint
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
lint.ignore = [
    "E501",  # line too long, handled by black
]
fix = true

[tool.ruff.lint.isort]
known-first-party = ["zotero2readwise"]

[tool.ruff.lint.pydocstyle]
convention="google"

[project]
authors = [
    {name = "ealizadeh", email = "hello@ealizadeh.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "Pyzotero<1.6.2,>=1.6.1",
    "requests<3.0.0,>=2.26.0",
]
name = "zotero2readwise"
version = "0.4.5"
description = "Export your Zotero annotations and notes to Readwise"
readme = "README.md"
keywords = [
    "Zotero",
    "Readwise",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
    "Development Status :: 3 - Alpha",
]

[project.urls]
homepage = "https://github.com/e-alizadeh/Zotero2Readwise"
repository = "https://github.com/e-alizadeh/Zotero2Readwise"
documentation = "https://github.com/e-alizadeh/Zotero2Readwise"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pylint>=3.3.3",
    "ruff>=0.8.6",
]
